# Zombie-Survival-2.0

./: AGENTS.md  CMakeLists.txt  LICENSE  Makefile  README.md
.github/rulesets/: main-branch-protection.yml
.github/workflows/: code-map.yml
assets/images/zombie/normal zombie/variation 1/: temp
docs/: Codex Project Rules.txt  ReadMe.md  code_map.md
docs/UI (Interface)/: Main Menu  Sub Menu (Select Mode)
docs/assets/: asset_guidelines.md
docs/inspirations/: ideas
docs/mechanics/: General Premise
docs/shop/: Shop Community
docs/world/: generation  generation.md  world requirements  world_requirements.md
docs/zs2_starter_pack/docs/: accessibility_test_sheet.md  bug_report_template.md  legal_attribution.md  perf_notes.md  playtest_survey.md  reference_links.md  release_notes_template.md  sprite_naming.md  style_guide.md
docs/zs2_starter_pack/sample/: save_001.json
docs/zs2_starter_pack/schemas/: items.schema.json  recipes.schema.json  save.schema.json
include/: README.md  zombie_viewer.h
scripts/: gen_code_map.py
src/: CMakeLists.txt  README.md  main.cpp  zombie_viewer.cpp
tests/: CMakeLists.txt  asset_config.h.in  asset_load.cpp  example_test.cpp  sprite_scale.cpp
